// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`file-upload (success) > 'POST /' 1`] = `
"package example

import (
	context "context"
	acme "github.com/acme/acme-go"
	client "github.com/acme/acme-go/client"
	io "io"
	strings "strings"
)

func do() {
	client := client.NewClient()
	client.Service.Post(
		context.TODO(),
		strings.NewReader(
			"Hello, world!",
		),
		[]io.Reader{
			strings.NewReader(
				"First",
			),
			strings.NewReader(
				"Second",
			),
		},
		&acme.MyRequest{},
	)
}
"
`;

exports[`file-upload (success) > 'POST /just-file (simple)' 1`] = `
"package example

import (
	context "context"
	client "github.com/acme/acme-go/client"
	strings "strings"
)

func do() {
	client := client.NewClient()
	client.Service.JustFile(
		context.TODO(),
		strings.NewReader(
			"Hello, world!",
		),
	)
}
"
`;

exports[`file-upload (success) > 'POST /just-file-with-query-params (si…' 1`] = `
"package example

import (
	context "context"
	acme "github.com/acme/acme-go"
	client "github.com/acme/acme-go/client"
	strings "strings"
)

func do() {
	client := client.NewClient()
	client.Service.JustFileWithQueryParams(
		context.TODO(),
		strings.NewReader(
			"Hello, world!",
		),
		&acme.JustFileWithQueryParamsRequet{
			Integer: 42,
			MaybeString: acme.String(
				"exists",
			),
		},
	)
}
"
`;
